<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.websarva.wings.android.clocks.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_stopwatch"
        android:name="com.websarva.wings.android.clocks.ui.stopwatch.StopWatchFragment"
        android:label="@string/title_stopwatch"
        tools:layout="@layout/fragment_stopwatch" />

    <fragment
        android:id="@+id/navigation_timer"
        android:name="com.websarva.wings.android.clocks.ui.timer.TimerFragment"
        android:label="@string/title_timer"
        tools:layout="@layout/fragment_timer" />

    <fragment
        android:id="@+id/navigation_alarms"
        android:name="com.websarva.wings.android.clocks.ui.alarms.AlarmsFragment"
        android:label="@string/title_alarms"
        tools:layout="@layout/fragment_alarm" />
</navigation>