<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.timer.TimerFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="-45dp"
            android:background="#dfe"
            android:hint="@string/zero_time"
            android:inputType="phone"
            android:maxLength="2"
            android:maxLines="1"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/colon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:text="@string/colon"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:inputType="phone"
            android:maxLines="1"
            android:maxLength="2"
            android:background="#dfe"
            android:layout_gravity="center"
            android:hint="@string/zero_time"
            android:layout_marginStart="45dp" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="60sp"
            android:clickable="true"
            android:focusable="true" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:background="@drawable/circle_progress"
            android:max="6039000"
            android:progress="0"
            android:progressDrawable="@drawable/bg_progress"
            android:rotation="90"
            android:scaleX="-1" />
    </FrameLayout>

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        app:backgroundTint="@null"
        android:background="@drawable/button_state"
        android:text="@string/start"
        android:textSize="17sp" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@null"
        android:background="@drawable/button_state2"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:text="@string/stop"
        android:textSize="17sp" />

</LinearLayout>